FOF 2.5.4
================================================================================
+ gh-584 removeHeader method added in Form, allowing you to remove a header from an XML form.
# [HIGH] F0FUtilsUpdateJoomla could not detect Joomla! updates due to changes in Joomla! XML update sources
# [LOW] F0FUtilsUpdate had a wrong version_compare which didn't allow the automatic update to proceed

FOF 2.5.3
================================================================================
# [HIGH] Wrong date in package's version.txt
# [HIGH] gh-581 The integrated update method didn't work

FOF 2.5.2
================================================================================
# [HIGH] The caching ID was always wrong since JCache::makeId() is never called any more in Joomla!.

FOF 2.5.1
================================================================================
# [HIGH] Crazy code for JDatabaseInterface in Joomla! causes fatal errors when using the Joomla! db driver in FOF in CLI

FOF 2.5.0
================================================================================
+ Now compatible with Joomla! 1.6, 1.7, 2.5, 3.0, 3.1, 3.2, 3.3, 3.4 and 3.5 (best used with Joomla! 3.3 or later)
+ F0FUtilsIniFile to parse INI files even on stupid hosts
+ F0FUtilsConfigHelper to get component configuration parameters without going through JComponentHelper
+ F0FUtilsUpdate improvements
~ Clear the OPcache when installing / updaing an extension as long as it uses F0FUtilsInstallscript
~ F0FUtilsIp: let the workarounds be disabled
# [HIGH] If you declared onBefore/onAfter Controller methods public FOF would erroneously treat them as tasks

FOF 2.4.3
================================================================================
# [MEDIUM] F0FDownloadAdapterCurl: Would not follow HTTP redirects on servers with PHP Safe Mode enabled

FOF 2.4.2
================================================================================